cut text round 1: introduction

--- a/manuscript_v1.Rmd
+++ b/manuscript_v1.Rmd
@@ -2,7 +2,10 @@
 title: "manuscript_v1"
 author: "Karthik Thrikkadeeri"
 date: "28/11/2021"
-output: word_document
+bibliography: msc-thesis.bib
+output: 
+  word_document:
+    number_sections: true
 ---
 
 ```{r setup, include=FALSE}
@@ -13,53 +16,42 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Habitat selection in birds
 
-Studies of habitat selection in birds date back a considerable number of years (see Grinnell, 1917; Hildén, 1965; Svärdson, 1949; Block and Brennan, 1993; Cody, 1985). Much of the early habitat selection theory was sparked by natural history observations, and was moulded, and therefore characterised, by correlative models of habitat characteristics and species abundance (MacArthur and Pianka, 1966; Verner et al., 1986; Rosenzweig, 1991). However, the focus subsequently shifted to models that involved density dependence, seductively popularised as the ‘ideal free distribution’ and ‘ideal despotic distribution’ models (Fretwell and Lucas, 1969; Fretwell, 1972). More recent studies acknowledge the several different factors that might be at play in determining species’ movements through and selection of different habitats. For a long time, there was ambiguity in the semantic and empirical distinctions between ‘habitat use’ and ‘habitat selection’ (Hall et al., 1997). The current understanding is that the former refers to the way in which an individual or species uses habitats to meet its life history needs (Block and Brennan, 1993) while the latter refers to a hierarchical process of behavioural responses that may result in the disproportionate use of habitats to influence survival and fitness of individuals (Cody, 1985; Block and Brennan, 1993). Habitat-use patterns are the end result of habitat-selection processes. 
+The origins of the study of habitat selection in birds date back a considerable number of years (see Grinnell, 1917; Hildén, 1965; Svärdson, 1949; Block and Brennan, 1993; Cody, 1985). Its theoretical corpus has evolved from the early correlative models of habitat characteristics and species abundance (MacArthur and Pianka, 1966; Verner et al., 1986; Rosenzweig, 1991), to density dependence (Fretwell and Lucas, 1969; Fretwell, 1972) and more recently to broader multifaceted approaches. Despite the historical ambiguity (Hall et al., 1997) in the terms ‘habitat use’ and ‘habitat selection’, the current understanding is that habitat-use patterns are the end result of habitat-selection processes (Cody, 1985; Block and Brennan, 1993). 
 
-Animals select habitats by assessing the environment at multiple spatial scales and making a series of hierarchical choices (Johnson, 1980; Cody, 1985). Broad-scale selection is reflected in species’ geographic ranges and in the landscape features surrounding home ranges, while fine-scale selection is reflected in microhabitats used for foraging, reproduction, and shelter (Johnson, 1980; Saab, 1999). Species vary in their flexibility of habitat selection, from generalists to specialists, with specialists being less flexible and more susceptible to change (Devictor et al., 2008; Owens and Bennett, 2000). Intraspecific competition forces some individuals to occupy less suitable habitats, widening the ‘habitat breadth’ of that species, while interspecific competition has the opposite effect (Svärdson, 1949). Habitats chosen by animals can influence fitness outcomes via the costs (e.g., predation risk) and benefits (e.g., food availability) of habitat use. The conventional school of habitat selection considers two aspects that are crucial to understanding the adaptive significance of disproportionate use of habitats: demonstration of choice, and an assessment of fitness consequences associated with the choice (Jones, 2001). 
+Animals select habitats by assessing the environment at multiple spatial scales and making a series of hierarchical choices (Johnson, 1980; Cody, 1985). Broad-scale selection is reflected in species’ geographic ranges and in the landscape features surrounding home ranges, while fine-scale selection is reflected in microhabitats used for foraging, reproduction, and shelter (Johnson, 1980; Saab, 1999). Species vary in their flexibility of habitat selection, from generalists to specialists, with specialists being less flexible and more susceptible to change (Devictor et al., 2008; Owens and Bennett, 2000). Intraspecific competition forces some individuals to occupy less suitable habitats, widening the ‘habitat breadth’ of that species, while interspecific competition has the opposite effect (Svärdson, 1949). Habitats chosen by animals can influence fitness outcomes via the costs (e.g., predation risk) and benefits (e.g., food availability) of habitat use. 
 
-Notably, the literature on habitat selection in birds, and more generally in free-ranging animals, has a number of biases, the most striking of which is that a majority targets migratory birds (e.g., Gailly et al., 2020; Jenkins et al., 2017; Szymkowiak and Thomson, 2019). This attention is not unjustified—migrants have complex habitat requirements that vary through the annual cycle, across their geographic range, along migratory routes, and at multiple spatial scales. Therefore, investigating their selection patterns may reveal more about the links between organisms and habitat and landscape features than those of resident species would. However, there are additional nested biases: most studies conducted in breeding grounds focus on the pre-breeding and breeding periods (e.g., Danchin et al., 1998; Kleist et al., 2017; Bosco et al., 2021), while some study wintering grounds (usually in the tropics; e.g., Strasser et al., 2019; Ruiz-Sanchez et al., 2017; Albert et al., 2020). To a lesser extent, there are studies concerning stopover sites which are equally important (e.g., Papageorgiou et al., 2017; Wolfe et al., 2014; Alonso et al., 2020; Cohen et al., 2021). There is also a significant body of literature concerning the dynamics of long-distance migrants like shorebirds and other large-bodied birds (e.g., Jourdan et al., 2021; Wang et al., 2019; Devries et al., 2018), which are relatively easier to track at the large scale. 
+Notably, the literature on habitat selection in birds, and more generally in free-ranging animals, has a number of biases, the most striking of which is that a majority targets migratory birds (e.g., Gailly et al., 2020; Jenkins et al., 2017; Szymkowiak and Thomson, 2019). This attention is not unjustified---migrants have complex habitat requirements that vary through the annual cycle, across their geographic range, along migratory routes, and at multiple spatial scales. Therefore, investigating their selection patterns may reveal more about the links between organisms and habitat and landscape features than those of resident species would. However, there are additional nested biases: most studies conducted in breeding grounds focus on the pre-breeding and breeding periods (e.g., Danchin et al., 1998; Kleist et al., 2017; Bosco et al., 2021), while some study wintering grounds (usually in the tropics; e.g., Strasser et al., 2019; Ruiz-Sanchez et al., 2017; Albert et al., 2020). To a lesser extent, there are studies concerning stopover sites which are equally important (e.g., Papageorgiou et al., 2017; Wolfe et al., 2014; Alonso et al., 2020; Cohen et al., 2021). There is also a significant body of literature concerning the dynamics of long-distance migrants like shorebirds and other large-bodied birds (e.g., Jourdan et al., 2021; Wang et al., 2019; Devries et al., 2018), which are relatively easier to track at the large scale. 
 
-The wisdom that habits and choices of all animals are driven primarily by goals of reproduction and food procurement, and that these are adjusted according to the prevalent environmental conditions and variation of seasons, is ancient (Aristotle, ca. 350 BC). However, the disproportionate attention given by researchers to breeding- and nest-site selection could be because the fitness costs and benefits resulting from selection have traditionally been linked with reproductive success and offspring survival. Nest survival is a frequently used surrogate for reproductive success in birds because this vital rate has important ramifications for population growth (Ricklefs, 1969; Nagy and Holmes, 2004). Nevertheless, habitat dynamics during transitional extra-breeding periods can be of great importance as well, given the high stress associated with them. 
+This disproportionate attention given by researchers to breeding- and nest-site selection could be because the fitness costs and benefits resulting from selection have traditionally been linked with reproductive success and offspring survival. Nevertheless, habitat dynamics during transitional extra-breeding periods can be of great importance as well, given the associated high stress. 
 
-## Non-breeding season
+## Post-breeding season
 
-In breeding grounds, habitat selection on the other end of the timeline, i.e., during late summer and early autumn prior to winter migration, remains understudied. Questions regarding community structure and niche breadth take on new dimensions in these periods. For one, birds are not as territorial, and the high degree of transience in post-breeding bird species, particularly migrants, can result in the co-occurrence of species in habitats that are unsuitable for both breeding and wintering (Winker, 1995). Moreover, motivations for habitat selection are not too diverse; the main challenges are food scarcity coupled with increased food requirements—both for migrants that need to build up enough nutritional reserves and for residents that need to prepare for the oncoming winter (via i.a., food-search and caching)—and the consequently higher predation risk. 
+In breeding grounds, habitat selection on the other end of the timeline, i.e., during late summer and early autumn prior to winter migration, remains understudied. Questions regarding community structure and niche breadth take on new dimensions in these periods. For one, territoriality is lower and mobility is higher, allowing birds greater freedom in choosing foraging areas (Uesugi and Murakami, 2007). Moreover, motivations for habitat selection are straightforward and unambiguous; the main challenges are food scarcity coupled with increased food requirements---both for migrants that need to build up enough nutritional reserves and for residents that need to prepare for the oncoming winter (via i.a., food-search and caching)---and the consequently higher predation risk. 
 
-The period of late summer and early autumn, prior to migration, also sees a transition from parent-dependent fledgelings to independent young birds that have to overcome challenges brought by the changing season and by their lack of experience in foraging, navigating and avoiding predators (Anders et al., 1997). Especially to them but also to adults, dense vegetation may provide cover and protection from adverse weather and predators. The high mobility and non-territoriality of juveniles may allow them more freedom in choosing foraging areas (Uesugi and Murakami, 2007). Furthermore, dispersing juveniles may also collect social information regarding future site quality during the post-breeding period (Betts et al., 2008a). Yet, this period remains understudied and most of the research has involved fledgeling-dependence on parental care (e.g., Weatherhead and Mcrae, 1990; Anders et al., 1997; Cohen and Lindell, 2004; Rush and Stutchbury, 2008). Nevertheless, there is a corpus of slowly growing evidence that habitat selection in birds may differ seasonally due to the varying ecological requirements during the different seasons (Rivera et al., 1998; King et al., 2006; Akresh et al., 2009; Vitz and Rodewald, 2011; Dittmar et al., 2014). 
+The period of late summer and early autumn, prior to migration, also sees a transition from parent-dependent fledgelings to independent young birds that have to overcome challenges brought by the changing season and by their lack of experience in foraging, navigating and avoiding predators (Anders et al., 1997). Especially to them but also to adults, dense vegetation may provide cover and protection from adverse weather and predators. Furthermore, dispersing juveniles may also collect social information regarding future site quality during the post-breeding period (Betts et al., 2008a). Despite slowly growing evidence that habitat selection in birds may differ seasonally due to the varying ecological requirements during the different seasons (Rivera et al., 1998; King et al., 2006; Akresh et al., 2009; Vitz and Rodewald, 2011; Dittmar et al., 2014), this period remains understudied. 
 
 ## The role of competition
 
 In general, interspecific competition is likely to be higher among closely related species due to similar resource use patterns which would lead to smaller overall habitat breadths and overlaps, whereas without competitive effects related species can be expected to overlap more since they have similar basic feeding patterns. Alatalo (1981) found evidence for the prevalence of interspecific competition in the seasonal environment of Finland and noted that this ecological process might be working at two different time scales: either in current ecological time as exemplified by interspecific territoriality in some bird species (e.g., Orians and Willson, 1964) or during the evolution of feeding adaptations of the species—for example, tit species are better adapted to exploit resources in their preferred habitats than in other habitats (Partridge, 1976; Snow, 1954). 
 
-The potential variation in the role of competition as a driver of habitat use with seasons is an interesting avenue. The competitive release hypothesis (Gauthreaux Jr, 1982; sensu Chapman et al., 2011) states that competition over limited resources in the resident grounds during winter can predict patterns of partial migration; the decrease in overall resource availability is balanced by a reduction in the number of individuals that need resources. While this hypothesis concerns specifically intraspecific competition, it can just as well be applied to interspecific competition. Therefore, species that are highly territorial and competitive in the breeding season might switch to cooperation due to competitive release, as suggested by the widespread occurrence of mixed-species foraging flocks (Greenberg, 2001). In closed habitats such as woodlands, predators attack at a close range and feeding competition is generally lower between species than within, thus favouring mixed associations of small numbers of several to many species (Terborgh, 1990). Risk of predation is thought to be a major factor driving the formation of mixed-species flocks, and species in mixed-species flocks show higher foraging and lower vigilance rates (Sridhar et al., 2009). In the absence of strong competition, birds can be expected to select for habitats that maximise foraging efficiency and, eventually, survival.
+The role of competition as a driver of habitat use can be diverse and can vary with seasons. The competitive release hypothesis (Gauthreaux Jr, 1982; sensu Chapman et al., 2011), concerning specifically intraspecific competition, may just as well be applied to interspecific competition. It states that competition over limited resources in the breeding grounds during winter can predict patterns of partial migration; the decrease in overall resource availability is balanced by a reduction in the number of individuals that need resources. Therefore, species that are highly territorial and competitive in the breeding season might switch to cooperation due to competitive release, as suggested by the widespread occurrence of mixed-species foraging flocks (Greenberg, 2001). In closed habitats such as woodlands, predators attack at a close range and feeding competition is generally lower between species than within, thus favouring mixed associations of small numbers of several to many species (Terborgh, 1990). Risk of predation is thought to be a major factor driving the formation of mixed-species flocks, and species in mixed-species flocks show higher foraging and lower vigilance rates (Sridhar et al., 2009). In the absence of strong competition, birds can be expected to select for habitats that maximise foraging efficiency and, eventually, survival.
 
 ## Shifts in foraging strategy
 
-Aside from competition, there are several other factors that may change with the seasons and that birds might select for. Migrating land birds exhibit a high level of foraging and dietary flexibility (Herrera, 1978; Gauthreaux Jr, 1982; Parrish, 1997, 2000; McWilliams and Karasov, 2001; Salewski and Jones, 2006) and species generally considered to be insectivorous, at least during the breeding period, may become facultatively frugivorous in autumn during passage due to lower abundances of arthropods and greater availability and accessibility of fruits (Faaborg, 2002; Bairlein, 2003; Ottich and Dierschke, 2003; Newton, 2010; Hernández, 2009). Frugivory, due to the high concentrations of fatty acids in fruits, allows the birds to rapidly build up the fat reserves vital for migration. Depending on the migration distance and distance from large ecological barriers such as deserts and seas, birds might even make the shift to frugivory while still in their breeding grounds in autumn, so as to start accumulating fat deposits (Bairlein and Simons, 1995). Within frugivory, birds may exhibit further selectivity by preferentially consuming fruits of native plants over those of invasive ones in late autumn (Smith et al., 2013), even if fruits of the latter are more abundant in this vital pre-migratory period (Gallinat et al., 2020). This is thought to be due to nutritional differences between the two (Ingold and Craycraft, 1983; Smith et al., 2013) although some studies have found no such differences (Greenberg and Walter, 2010). This preference may also be reversed during winter (Greenberg and Walter, 2010).
+Aside from competition, there are several other factors that may change with the seasons and that birds might select for. Migrating land birds exhibit a high level of foraging and dietary flexibility (Herrera, 1978; Gauthreaux Jr, 1982; Parrish, 1997, 2000; McWilliams and Karasov, 2001; Salewski and Jones, 2006). Species generally considered to be insectivorous, at least during the breeding period, may become facultatively frugivorous in autumn due to lower abundances of arthropods and greater availability and accessibility of fruits (Bairlein and Simons, 1995; Faaborg, 2002; Bairlein, 2003; Ottich and Dierschke, 2003; Newton, 2010; Hernández, 2009). Frugivory, due to the high concentrations of fatty acids in fruits, allows the birds to rapidly build up the fat reserves vital for migration. Within frugivory, birds may exhibit further selectivity by preferentially consuming fruits of native plants over those of invasive ones in late autumn (Smith et al., 2013), even if fruits of the latter are more abundant in this vital pre-migratory period (Gallinat et al., 2020). This is thought to be due to nutritional differences between the two (Ingold and Craycraft, 1983; Smith et al., 2013), although some studies have found no such differences (Greenberg and Walter, 2010) and this preference may also be reversed during winter (Greenberg and Walter, 2010).
 
-It is worth noting an important distinction between temperate forests of the Old and New Worlds. Firstly, there are no specialised obligate frugivorous species in the Old World temperate avifauna. Moreover, European temperate forests have a much lower diversity of fruiting plants than American ones. Among the most widespread fruiting species are bramble Rubus spp., bilberry and blueberry Vaccinium spp., elderberry Sambucus nigra, rowan Sorbus aucuparia and alder buckthorn Frangula alnus. These species are typical of hedgerows, wood edges and disturbed patches, and old growth mixed forests, but are scarcely found in the large, compact and structurally poor stands of present-day Central European forests. 
+It is worth noting an important distinction between temperate forests of the Old and New Worlds. Firstly, there are no specialised obligate frugivorous species in the Old World temperate avifauna. Moreover, European temperate forests have a much lower diversity of fruiting plants than American ones. Among the most widespread fruiting species are bramble *Rubus* spp., bilberry and blueberry *Vaccinium* spp., elderberry *Sambucus nigra*, rowan *Sorbus aucuparia* and alder buckthorn *Frangula alnus*. These species are typical of hedgerows, wood edges and disturbed patches, and old growth mixed forests, but are scarcely found in the large, compact and structurally poor stands of present-day Central European forests. 
 
-Contrarily to the migratory birds reliant on fruits, some wintering insectivorous birds have been known to consume large numbers of terrestrial arthropods even in winter. Tits (Paridae) in spruce forests commonly consume Lepidoptera, Hemiptera, Coleoptera and spiders (Betts, 1955). For example, Gibb (1960) found that birds in winter consumed around 50% of the stock of the eucosmid Ernarmonia conicolana which is known to be an important food source of blue tits. Other observations from forests suggest that spiders and insects including eggs, larvae, pupae and adults in diapause are also important winter food sources for insectivorous songbirds (Williams and Batzli, 1979; Jansson and Brömssen, 1981; Laurent, 1986). There is a marked decline in arboreal arthropods throughout winter due to this predation effect, and this translates to strong reductions in herbivore densities in the following growing season (Barber and Wouk, 2012). There is also strong evidence that birds can indirectly impact terrestrial plant communities through arthropod predation (Van Bael et al., 2008; Mooney et al., 2010; Mäntylä et al., 2011), although few such studies in temperate regions have explored these effects in winter. Habitat features and quality
+Contrarily to the migratory birds reliant on fruits, some wintering birds have been known to consume large numbers of terrestrial arthropods even in winter. Tits (Paridae) in spruce forests commonly consume Lepidoptera, Hemiptera, Coleoptera and spiders (Betts, 1955). For example, Gibb (1960) found that birds in winter consumed around 50% of the stock of the eucosmid Ernarmonia conicolana which is known to be an important food source of blue tits. Other observations from forests suggest that spiders and insects including eggs, larvae, pupae and adults in diapause are also important winter food sources for insectivorous songbirds (Williams and Batzli, 1979; Jansson and Brömssen, 1981; Laurent, 1986). There is also strong evidence that birds can indirectly impact terrestrial plant communities through arthropod predation (Van Bael et al., 2008; Mooney et al., 2010; Mäntylä et al., 2011), although few such studies in temperate regions have explored these effects in winter. 
 
-Most studies on habitat selection attempt to uncover correlations of bird abundances or densities with various characteristics of habitats such as canopy cover, tree density and richness, etc. Although such features of the habitat might seem insignificant in the context of the relatively species-poor and structurally less diverse temperate forests, several studies have shown their links with bird preferences (Vitz and Rodewald, 2007). Modern forestry is a major factor that has been influencing landscape structure (Harris, 1984). In a primeval forest landscape, at small to larger scale, mosaics of different succession stages may result from forest disturbances such as fire, wind throw, snow damage, or bark beetle infection. In contrast, most modern-day forests in Central Europe have been restructured towards commercially exploited plantations dominated by spruce that form compact growths with a closed above-tree layer at maturity (Fanta, 2007).
+## Habitat features and quality
 
-The birds associated with remnants of the primeval forests, which are characterised by high internal habitat heterogeneity (as opposed to closed and uniform forests), are more aptly called ‘woodland species’ (see Hansson, 2001; Marshall and Moonen, 2002; Gregory et al., 2007) and might perceive heterogeneity itself as a continuous habitat (Lord and Norton, 1990). On the other hand, spatial segregation of habitats at a relatively fine-grained scale is suggested to allow for the co-occurrence of more species. Berg (1997) found that bird abundances correlated positively with the presence of deciduous trees and with tree diameter, while among conifers the Norway spruce Picea abies was preferred over the pine Pinus sylvestris; total bird densities were also higher in fragments than in forest sites. Furthermore, birds might even show within-season movement up or down gradients of habitat quality. Such questions have scarcely been explored, but there have been affirmative findings at least in the breeding season (Betts et al., 2008b). 
-
-## Predation on arthropods
-
-There is a general scarcity of studies monitoring seasonal changes in predation rates. However, predation caused by birds, as well as by other predators in general, has been shown to be affected by habitat characteristics too. The enemies hypothesis posits that predation rates on herbivorous insects increase with plant diversity (Root, 1973; Russell, 1989; Björkman et al., 2011; Zhang and Adams, 2011). While some empirical studies have found evidence against the hypothesis (e.g., Haase et al., 2015; Schuldt et al., 2015), many studies in both tropical and temperate systems have shown plant diversity to be correlated with predation rates (e.g., Moreira et al., 2012; Staab et al., 2014). Leles et al. (2017) concluded that predation on herbivorous insects in the understorey vegetation by ants in tropical forests is affected by features of the plant community structure, i.e., species richness, composition and density, and is unaffected by fragmentation. Predation by birds has been found to decrease with structural complexity (but see Poch and Simonetti, 2013 for opposite in plantations) and, at the small scale, increase with neighbouring species richness (Muiruri et al., 2016). However, relatively little is known about the effect of bird communities on predation rates. Philpott et al. (2009) found bird species richness to be related with bird predation rates, but they also determined that vegetation characteristics were not important.
-
-Bird insectivory in temperate forests is expected to be higher in forest edges than in interiors (Barbaro et al., 2014; González-Gómez et al., 2006). Either foliage-gleaning insectivorous birds forage at forest edges disproportionately more than in interiors (see Ries et al., 2004), or prey are easier to locate (Skoczylas et al., 2007) or are simply more abundant (Brotons and Herrando, 2003; Barber and Marquis, 2011) in edges. However, results from studies in this area are mixed. Barbaro et al. (2012) found that overall bird predation rates increased with forest fragmentation, in contrast to Leles et al. (2017) who found no effect of fragmentation. Edge effects may also be reversed for some bird foraging guilds such as bark-foragers, depending on variation in understorey density and season (Whelan and Maina, 2005). Ground‐gleaning forest birds are known to depend on resources such as soil arthropods, which are typically more abundant at forest interiors because of drier soil conditions at edges (Burke and Nol, 1998; Van Wilgenburg et al., 2001). 
-
-Insectivorous birds can track different cues at different scales. At the larger scale, plant species information might be more useful while at the small scale, structural characteristics might be more informative (Muiruri et al., 2016). Moreover, differences in the specific features used as cues might be found in other aspects too. In stopover sites of migrant birds, it has been shown that while insectivores chiefly use vegetation structure, frugivores primarily use food abundance as cues for habitat use during stopover (Wolfe et al., 2014). This discordance between using structural characteristics and fruit resources as a cue may be explained evolutionarily. Fruiting bodies are often brightly coloured to attract potential seed dispersers (Willson and Whelan, 1990). Conversely, to avoid predation, forest-dwelling arthropod species are often cryptic (Bond, 2007) and therefore, it may be inherently difficult and inefficient for an insectivore to assess availability of arthropods, particularly in resource-scarce periods. 
+Canopy cover, tree density and richness, etc. are commonly used habitat characteristics that are compared with bird abundances or densities. Several studies have shown their links with bird preferences (Vitz and Rodewald, 2007). Modern forestry is a major factor that has been influencing landscape structure (Harris, 1984), and most modern-day forests in Central Europe have been restructured towards commercially exploited plantations dominated by spruce that form compact growths with a closed above-tree layer at maturity (Fanta, 2007). ***But many are highly heterogenous due to management.*** Spatial segregation of habitats at a relatively fine-grained scale is suggested to allow for the co-occurrence of more species. Berg (1997) found that bird abundances correlated positively with the presence of deciduous trees and with tree diameter, while among conifers the Norway spruce *Picea abies* was preferred over the pine *Pinus sylvestris*; total bird densities were also higher in fragments than in forest sites. Furthermore, birds might even show within-season movement up or down gradients of habitat quality. Such questions have scarcely been explored, but there have been affirmative findings at least in the breeding season (Betts et al., 2008b). 
 
 ## Aims
 
-In this study, I investigated patterns of habitat selection exhibited by forest bird communities during the post-breeding and pre-migratory periods of the year. Multiple smaller patches of varying vegetational characteristics were chosen within a single larger stretch of forest, and bird abundances were studied starting from late summer until early autumn, covering both periods at a fine-grained temporal resolution. The main objectives were to identify the habitat features that are tracked most prominently by forest birds prior to periods of high stress (i.e., autumn-winter), to assess the patterns and magnitude of habitat selection, and to explore the possibilities of ecological interactions and strategies. Complementarily, I also aimed to determine whether or not birds shifted foraging strategies and, if so, what habitat factors were important, by monitoring insectivorous bird predation rates on artificial caterpillars over the course of the season. 
+In this study, I investigated patterns of habitat selection exhibited by post-breeding forest bird communities. Multiple smaller patches of varying vegetational characteristics were chosen within a single larger stretch of forest, and bird abundances were studied starting from late summer until early autumn, covering the post-breeding season at a fine-grained temporal resolution. The main objectives were to identify the habitat features that are tracked most prominently by forest birds prior to periods of high stress (i.e., autumn-winter), to assess the patterns and magnitude of habitat selection as well as possible temporal dynamism, and to explore the possibilities of ecological interactions and strategies. 
 
-## Hypotheses
-
-Due to the large number of possibilities, I did not have dichotomous hypotheses, but rather a set of multiple hypotheses. At the very first level, birds either show no preference for any particular habitat type, in which case they would be following a generalist strategy, or they do exhibit selectivity in that they track certain habitat characteristics, in which case they can be considered specialists. At the next level, these preferences (or lack thereof) either change, or they remain constant, reflecting a general preference. If the preferences do change, they either differ across groups of birds such as different feeding guilds, or as the season progresses from late summer to early autumn. Further, these patterns of birds with habitat may show corresponding patterns in predation rates, i.e., higher predation with greater abundance of birds. Finally, predation rates may also change with the season, linked negatively with the availability of true prey.
 
 # Methodology
 
